@@ -8,6 +8,10 @@ Changelog
 4.0a3 - Unreleased
 ------------------
 
+- Revert change that made the site object not copyable and prevent importing
+  from zexp files as a consequence.
+  [hannosch]
+
 - Do not display the author contact form when the author has no email
   (for example for openid users).  Refs #8707.
   [maurits]
